# strong-types.cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp  definitions.cpp  flags.cpp
include/: strong_types.hpp
include/strong_types/: flags.hpp  hash.hpp  iostream.hpp
support/vcpkg/strong-types/: portfile.cmake  usage  vcpkg.json
tests/: basic.cpp  flags.cpp  hash.cpp  iostream.cpp
