add_custom_target(examples)
function(add_example name)
  add_executable(${name} EXCLUDE_FROM_ALL ${name}.cpp)
  target_link_libraries(${name} PRIVATE strong-types)
  set_target_options(${name})
  add_dependencies(examples ${name})
endfunction()

add_example(basic)
add_example(definitions)
add_example(flags)
set_target_properties(flags PROPERTIES CXX_STANDARD 20)
